<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinnerDepartamentoChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selecciona_departamento" />

    <Spinner
        android:id="@+id/spinnerCiudadChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selecciona_ciudad"
        android:layout_marginTop="8dp" />

    <Spinner
        android:id="@+id/spinnerEmpresaChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selecciona_empresa"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnContinuarChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continuar"
        android:layout_marginTop="16dp" />
</LinearLayout>
